Further development of the deployment actions feature
